grammar.js
    chunk: ($) =>
      seq(
        optional($.hash_bang_line),
        repeat($.statement),
        optional($.return_statement),
      ),

    lyra_statement: ($) => seq("$", $.lyra_list, $._lyra_line_end),
    lyra_list: ($) => seq($.lyra_pipeline, repeat(seq("&", $.lyra_pipeline))),
    lyra_pipeline: ($) =>
      seq(optional("!"), $.lyra_command, repeat(seq("|", $.lyra_command))),
    lyra_command: ($) => choice($.lyra_simple_command, $.lyra_subshell),
    lyra_simple_command: ($) =>
      prec.right(
        choice(
          seq(
            repeat($.lyra_cmd_prefix),
            $.lyra_cmd_word,
            repeat($.lyra_cmd_suffix),
          ),
          repeat1($.lyra_cmd_prefix),
        ),
      ),
    lyra_cmd_suffix: ($) => choice($.lyra_word, $.lyra_redirection),
    lyra_cmd_word: ($) => $.lyra_word,
    lyra_word: ($) => seq($.lyra_word_head, repeat($.lyra_word_continuation)),
    lyra_word_head: ($) =>
      choice(
        $.identifier,
        $.number,
        $.string,
        $.lyra_literal,
        $.lyra_variable,
        $.lyra_command_subst,
      ),
    lyra_variable: ($) =>
      choice(seq("$", $.lyra_name), seq("${", $.lyra_param_expr, "}")),
    lyra_name: ($) => $.identifier,
    for_statement: ($) =>
      seq(
        "for",
        field("clause", choice($.for_generic_clause, $.for_numeric_clause)),
        "do",
        field("body", optional_block($)),
        "end",
      ),
    // namelist in explist
    for_numeric_clause: ($) =>
      seq(
        field("name", $.identifier),
        field("operator", "="),
        field("start", $.expression),
        ",",
        field("end", $.expression),
        optional(seq(",", field("step", $.expression))),
      ),
    // namelist ::= Name {',' Name}
    number: (_) => {
      function number_literal(digits, exponent_marker, exponent_digits) {
        return choice(
          seq(digits, /U?LL/i),
          seq(
            choice(
              seq(optional(digits), optional("."), digits),
              seq(digits, optional("."), optional(digits)),
            ),
            optional(
              seq(
                choice(
                  exponent_marker.toLowerCase(),
                  exponent_marker.toUpperCase(),
                ),
                seq(optional(choice("-", "+")), exponent_digits),
              ),
            ),
            optional(choice("i", "I")),
          ),
        );
      }

      const decimal_digits = /[0-9]+/;
      const decimal_literal = number_literal(
        decimal_digits,
        "e",
        decimal_digits,
      );

      const hex_digits = /[a-fA-F0-9]+/;
      const hex_literal = seq(
        choice("0x", "0X"),
        number_literal(hex_digits, "p", decimal_digits),
      );

      const bin_digits = /[01]+/;
      const bin_literal = seq(
        choice("0b", "0B"),
        choice(
          seq(bin_digits, /U?LL/i),
          seq(bin_digits, optional(choice("i", "I"))),
        ),
      );

      return token(choice(decimal_literal, hex_literal, bin_literal));
    },

    // LiteralString
    string: ($) => choice($._quote_string, $._block_string),

    _quote_string: ($) =>
      choice(
        seq(
          field("start", alias('"', '"')),
          field(
            "content",
            optional(alias($._doublequote_string_content, $.string_content)),
          ),
          field("end", alias('"', '"')),
        ),
        seq(
          field("start", alias("'", "'")),
          field(
            "content",
            optional(alias($._singlequote_string_content, $.string_content)),
          ),
          field("end", alias("'", "'")),
        ),
      ),

    _block_string: ($) =>
      seq(
        field("start", alias($._block_string_start, "[[")),
        field("content", alias($._block_string_content, $.string_content)),
        field("end", alias($._block_string_end, "]]")),
      ),

    _prefix_expression: ($) =>
      prec(1, choice($.variable, $.function_call, $.parenthesized_expression)),

    // var ::=  Name | prefixexp [ exp ] | prefixexp . Name
    function_call: ($) =>
      seq(
        field("name", choice($._prefix_expression, $.method_index_expression)),
        field("arguments", $.arguments),
      ),
    // prefixexp ':' Name
    arguments: ($) =>
      choice(
        seq("(", optional(list_seq($.expression, ",")), ")"),
        $.table_constructor,
        $.string,
      ),

    // '(' exp ')'
    identifier: (_) => {
      const identifier_start =
        /[^\p{Control}\s+\-*/%^#$&~|<>=(){}\[\];:,.\\'"\d]/;
      const identifier_continue =
        /[^\p{Control}\s+\-*/%^#$&~|<>=(){}\[\];:,.\\'"]*/;
      return token(seq(identifier_start, identifier_continue));
    },

    // comment
